--- a/templates/config.rb.j2
+++ b/templates/config.rb.j2
@@ -1,10 +1,12 @@
 # encoding: utf-8
 
-##s
+##
 # Backup v4.x Configuration
 #
 # Documentation: http://backup.github.io/backup/v4/
 # Issue Tracker: https://github.com/backup/backup/issues
+
+require '{{ backup_setup.config_dir }}/cli_s3_syncer.rb'
 
 {% if backup_notifier is defined %}
 {% if backup_notifier.slack is defined %}
@@ -27,7 +29,7 @@ end
 {% if backup_notifier.mail is defined %}
 Notifier::Mail.defaults do |mail|
   mail.on_success           = {{ backup_notifier.mail.on_success }}
-  mail.on_warning           = true
+  mail.on_warning           = {{ backup_notifier.mail.on_warning }}
   mail.on_failure           = true
   mail.from                 = '{{ backup_notifier.mail.from }}'
   mail.to                   = '{{ backup_notifier.mail.to }}'
@@ -36,7 +38,7 @@ Notifier::Mail.defaults do |mail|
   mail.domain               = '{{ backup_notifier.mail.domain }}'
   mail.user_name            = '{{ backup_notifier.mail.user_name }}'
   mail.password             = '{{ backup_notifier.mail.password }}'
-  mail.authentication       = '{{ backup_notifier.mail.authentication }}'
+  mail.authentication       = {{ backup_notifier.mail.authentication }}
   mail.encryption           = {{ backup_notifier.mail.encryption }}
 end
 {% endif %}
@@ -98,10 +100,31 @@ end
 
 {% if backup_store.S3 is defined %}
 Storage::S3.defaults do |s3|
-  s3.use_iam_profile   = true
+  s3.access_key_id     = '{{ backup_store.S3.access_key_id }}'
+  s3.secret_access_key = '{{ backup_store.S3.secret_access_key }}'
   s3.region            = '{{ backup_store.S3.region }}'
   s3.bucket            = '{{ backup_store.S3.bucket }}'
   s3.path              = '{{ backup_store.S3.path }}'
+  s3.storage_class     = :standard_ia
+end
+
+Syncer::Cloud::S3.defaults do |s3|
+  s3.access_key_id     = '{{ backup_store.S3.access_key_id }}'
+  s3.secret_access_key = '{{ backup_store.S3.secret_access_key }}'
+  s3.region            = '{{ backup_store.S3.region }}'
+  s3.bucket            = '{{ backup_store.S3.bucket }}'
+  s3.path              = '{{ backup_store.S3.path }}'
+  s3.storage_class     = :standard
+  s3.mirror            = false
+end
+
+Syncer::Cloud::CliS3Syncer.defaults do |s3|
+  s3.access_key_id     = '{{ backup_store.S3.access_key_id }}'
+  s3.secret_access_key = '{{ backup_store.S3.secret_access_key }}'
+  s3.region            = '{{ backup_store.S3.region }}'
+  s3.bucket            = '{{ backup_store.S3.bucket }}'
+  s3.path              = '{{ backup_store.S3.path }}'
+  s3.storage_class     = :standard_ia
 end
 {% endif %}
 
